# true-roll

./: 404.html  README.md  bowling.db  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup_uv.sh
.github/: ci.yml
api/: index.html
contact/: index.html
contribute/: index.html
docs/: api.md  cli.md  contribute.md  index.md  interfaces.md  tui.md  web.md
search/: search_index.json
src/trueroll/: __init__.py
src/virtual_lanes/: __init__.py
tests/: test_alley.py  test_bowler.py  test_bowling_database.py  test_game.py  test_league.py  test_scoring.py  test_tournament.py
trueroll/: __init__.py  alley.py  bowler.py  bowling_database.py  game.py  league.py  scoring.py  tournament.py
