[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trueroll"
version = "0.2.0"
description = "A ten-pin bowling simulation library designed to model games, analyse player performance, and explore the effects of different bowling conditions."
authors = [
    {name = "Michael Borck", email = "michael@borck.me"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.52.1",
    "python-fasthtml>=0.8.2",
]

[project.urls]
"Documentation" = "https://michaelborck.au/trueroll/"
"Repository" = "https://github.com/michael-borck/trueroll"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.3.0",
    "mkdocs>=1.6.0",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.0",
]

[project.scripts]
trueroll = "trueroll.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trueroll"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ERA"]
ignore = []

[tool.ruff.isort]
known-first-party = ["trueroll"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"